Theme: Prevent button block styles from bleeding into pledge form
This fixes an issue where adding the button block classes to the pledge form was creating double-button styles. This also fixes a mistakenly removed class on the remove contributor button.

Follow up to 5d76b975572d72dc5e50b8b0d0375e98b456da4a

--- a/themes/wporg-5ftf/css/objects/_buttons.scss
+++ b/themes/wporg-5ftf/css/objects/_buttons.scss
@@ -1,19 +1,21 @@
-.wp-block-button {
-	@extend .button;
+body.home {
+	.wp-block-button {
+		@extend .button;
 
-	display: inline-block;
-	height: auto;
-	margin-bottom: 1rem;
-}
+		display: inline-block;
+		height: auto;
+		margin-bottom: 1rem;
+	}
 
-.wp-block-button__link {
-	background: none;
-	color: $color__link-button;
-	text-decoration: none;
-
-	&:hover,
-	&:visited {
+	.wp-block-button__link {
+		background: none;
 		color: $color__link-button;
+		text-decoration: none;
+
+		&:hover,
+		&:visited {
+			color: $color__link-button;
+		}
 	}
 }
 
